--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -2,7 +2,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   build:
@@ -13,7 +13,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Login to GitHub Container Registry
-        run: docker login ghcr.io -u NirmalNegi07 -p ${{ secrets.GHCR_TOKEN }}
+        run: |
+          echo "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" | docker login ghcr.io -u NirmalNegi07 --password-stdin
 
       - name: Build Docker Image
         run: |
