--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -2,7 +2,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   build:
@@ -14,7 +14,7 @@ jobs:
 
       - name: Login to GitHub Container Registry
         run: |
-          echo "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" | docker login ghcr.io -u NirmalNegi07 --password-stdin
+          echo ${{ secrets.GHCR_PAT }} | docker login ghcr.io -u NirmalNegi07 --password-stdin
 
       - name: Build Docker Image
         run: |
