--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -2,7 +2,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main
+      - test/test
 
 jobs:
   build:
@@ -17,19 +17,6 @@ jobs:
           echo ${{ secrets.GHCR_PAT }} | docker login ghcr.io -u NirmalNegi07 --password-stdin
 
       - name: Build Docker Image
-        run: |
-          docker build -t because-ml-engine:v0.06 . \
-            --label "org.opencontainers.image.source=https://github.com/nirmalnegi07/laravelenvoy" \
-            --label "org.opencontainers.image.description=Test container image"
+        run: | echo "hello"
 
-      - name: Tag Docker Image
-        run: docker tag because-ml-engine:v0.06 ghcr.io/nirmalnegi07/because-ml-engine:v0.06
-
-
-
-
-        
-
-      - name: Push Docker Image to GHCR
-        run: docker push ghcr.io/nirmalnegi07/because-ml-engine:v0.06
 
