--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -13,8 +13,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Login to GitHub Container Registry
-        run: |
-          echo ${{ secrets.GHCR_PAT }} | docker login ghcr.io -u NirmalNegi07 --password-stdin
+  run: |
+    docker login ghcr.io -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
+
 
       - name: Build Docker Image
         run: |
